Numerous minor improvements

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ include(KDECompilerSettings NO_POLICY_SCOPE)
 #find_package(QT NAMES Qt6 Qt5 COMPONENTS Core Quick LinguistTools QuickControls2 REQUIRED)
 #find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core Quick LinguistTools QuickControls2 REQUIRED)
 find_package(Qt5 ${QT_MIN_VERSION} COMPONENTS Core Quick LinguistTools QuickControls2 REQUIRED)
-find_package(KF5 ${KF_MIN_VERSION} COMPONENTS Kirigami2 CoreAddons REQUIRED)
+#find_package(KF5 ${KF_MIN_VERSION} COMPONENTS Kirigami2 CoreAddons REQUIRED)
 
 find_package(PkgConfig)
 pkg_check_modules(libpipewire REQUIRED libpipewire-0.3)
@@ -72,12 +72,15 @@ target_compile_definitions(pipecontrol
   PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)
 target_compile_options(pipecontrol
   PRIVATE ${libpipewire_CFLAGS_OTHER})
+target_compile_definitions(pipecontrol PRIVATE
+    PROJECT_VERSION="${PROJECT_VERSION}"
+    INSTALL_PREFIX="${CMAKE_INSTALL_PREFIX}")
 target_include_directories(pipecontrol
   PRIVATE ${libpipewire_INCLUDE_DIRS})
 target_link_libraries(pipecontrol
   PRIVATE Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::Quick Qt${QT_VERSION_MAJOR}::QuickControls2
   PRIVATE ${libpipewire_LIBRARIES}
-  PRIVATE KF5::Kirigami2
+#  PRIVATE KF5::Kirigami2
 )
 
 if(QT_VERSION_MAJOR EQUAL 6)
@@ -85,4 +88,6 @@ if(QT_VERSION_MAJOR EQUAL 6)
     qt_finalize_executable(pipecontrol)
 endif()
 
-install(TARGETS pipecontrol RUNTIME DESTINATION "bin" )
+install(TARGETS pipecontrol RUNTIME DESTINATION "bin/")
+install(FILES resources/PipeControl.desktop DESTINATION "share/applications/" )
+install(FILES resources/pipecontrol.png DESTINATION "share/icons/" )
