--- a/resources/PipeControl.desktop
+++ b/resources/PipeControl.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=PipeControl
-Exec=/usr/bin/pipecontrol %u
+Exec=${CMAKE_INSTALL_PREFIX}/bin/pipecontrol %u
 Type=Application
 Terminal=false
-Icon=/usr/share/icons/pipecontrol.png
+Icon=${CMAKE_INSTALL_PREFIX}/share/icons/pipecontrol.png
