Updated icon to a new one (v0.2.3)
Old icon was just the pipewire icon

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(pipecontrol VERSION 0.2.2 LANGUAGES CXX)
+project(pipecontrol VERSION 0.2.3 LANGUAGES CXX)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
@@ -109,4 +109,4 @@ endif()
 
 install(TARGETS pipecontrol RUNTIME DESTINATION "bin/")
 install(FILES ${CMAKE_BINARY_DIR}/PipeControl.desktop DESTINATION "share/applications/" )
-install(FILES resources/pipecontrol.png DESTINATION "share/icons/" )
+install(FILES resources/pipecontrol.svg DESTINATION "share/icons/" )
