Adding more pipewire data structures
- added Devices, Clients
- improved Nodes, Links, Settings, Ports, etc..
- added volume reading from nodes (hidden, WIP)
- disabled nodes are now dimmed in colors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(pipecontrol VERSION 0.2.6 LANGUAGES CXX)
+project(pipecontrol VERSION 0.2.6 LANGUAGES C CXX)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
@@ -49,6 +49,8 @@ set(PROJECT_SOURCES
         src/pw/qpipewirenode.cpp
         src/pw/qpipewirealsanode.h
         src/pw/qpipewirealsanode.cpp
+        src/pw/qpipewiredevice.h
+        src/pw/qpipewiredevice.cpp
         src/pw/qpipewirelink.h
         src/pw/qpipewirelink.cpp
         src/pw/qpipewireport.h
@@ -110,3 +112,5 @@ endif()
 install(TARGETS pipecontrol RUNTIME DESTINATION "bin/")
 install(FILES ${CMAKE_BINARY_DIR}/PipeControl.desktop DESTINATION "share/applications/" )
 install(FILES resources/pipecontrol.svg DESTINATION "share/icons/hicolor/scalable/apps/" )
+
+add_subdirectory("${CMAKE_SOURCE_DIR}/src/examples")
