Update to Qt6/KF6
- removed usage of signals/slots/emit keywords (KF6 requirement)
- QString(char*) not available any more, QStringLiteral or QString::fromUtf8 used instead.
- fixed few deprecated warnings
- ported QML to KF6

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,12 +8,13 @@ set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 
-set(CMAKE_CXX_STANDARD 17)
+# C++ designated initializers only available with ‘-std=c++20’ or ‘-std=gnu++20’
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-set(KF_MIN_VERSION "5.68.0")
-set(QT_MIN_VERSION "5.12.0")
-set(QT_VERSION_MAJOR "5")
+set(KF_MIN_VERSION "6.8.0")
+set(QT_MIN_VERSION "6.8.0")
+set(QT_VERSION_MAJOR "6")
 
 find_package(ECM ${KF_MIN_VERSION} REQUIRED NO_MODULE)
 
@@ -23,10 +24,8 @@ include(KDEInstallDirs)
 include(KDECMakeSettings)
 include(KDECompilerSettings NO_POLICY_SCOPE)
 
-#find_package(QT NAMES Qt6 Qt5 COMPONENTS Core Quick LinguistTools QuickControls2 DBus REQUIRED)
-#find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core Quick LinguistTools QuickControls2 DBus REQUIRED)
-find_package(Qt5 ${QT_MIN_VERSION} COMPONENTS Core Quick LinguistTools QuickControls2 DBus REQUIRED)
-find_package(KF5 ${KF_MIN_VERSION} COMPONENTS Kirigami2 I18n CoreAddons REQUIRED)
+find_package(Qt6 ${QT_MIN_VERSION} REQUIRED COMPONENTS Core Qml Quick LinguistTools QuickControls2 DBus)
+find_package(KF6 ${KF_MIN_VERSION} COMPONENTS Kirigami I18n CoreAddons REQUIRED)
 
 find_package(PkgConfig)
 pkg_check_modules(libpipewire REQUIRED libpipewire-0.3)
@@ -85,18 +84,18 @@ endif()
 target_compile_definitions(pipecontrol
   PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>
   PRIVATE -DPIPECONTROL_VERSION="${CMAKE_PROJECT_VERSION}"
-  PRIVATE -DKF5_COMPILED_VERSION="${KF5_VERSION}")
+  PRIVATE -DKF6_COMPILED_VERSION="${KF6_VERSION}")
 target_compile_options(pipecontrol
   PRIVATE ${libpipewire_CFLAGS_OTHER})
 target_compile_definitions(pipecontrol PRIVATE
     PROJECT_VERSION="${PROJECT_VERSION}"
     INSTALL_PREFIX="${CMAKE_INSTALL_PREFIX}")
-target_include_directories(pipecontrol
+target_include_directories(pipecontrol SYSTEM
   PRIVATE ${libpipewire_INCLUDE_DIRS})
 target_link_libraries(pipecontrol
-  PRIVATE Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::Quick Qt${QT_VERSION_MAJOR}::QuickControls2 Qt${QT_VERSION_MAJOR}::DBus
+  PRIVATE Qt::Core Qt::Quick Qt::QuickControls2 Qt::DBus
   PRIVATE ${libpipewire_LIBRARIES}
-  PRIVATE KF5::Kirigami2 KF5::I18n
+  PRIVATE KF6::Kirigami KF6::I18n
 )
 
 configure_file(
@@ -112,5 +111,3 @@ endif()
 install(TARGETS pipecontrol RUNTIME DESTINATION "bin/")
 install(FILES ${CMAKE_BINARY_DIR}/PipeControl.desktop DESTINATION "share/applications/" )
 install(FILES resources/pipecontrol.svg DESTINATION "share/icons/hicolor/scalable/apps/" )
-
-#add_subdirectory("${CMAKE_SOURCE_DIR}/src/examples")
